# mlb-team-schedule

./: .env.example  .eslintrc.cjs  .gitignore  Procfile  Procfile.dev  Procfile.devBuild  README.md  __init__.py  api.py  app.py  config.py  index.html  models.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  rollup.config.js  ruff.toml  scheduled_jobs.py  seedDB.py  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: test.yml
client/: App.svelte  GameModal.svelte  Navbar.svelte  Navbar.test.ts  README.md  api.ts  main.ts  setupTest.ts
client/API/: index.test.ts  index.ts  utility.test.ts  utility.ts
client/Actions/: UseExpandable.ts
client/CSS/: variables.less
client/Calendar/: Calendar.svelte  Calendar.test.ts  CalendarDay.svelte  CalendarDay.test.ts  CalendarDayDetail.svelte  CalendarDayDetail.test.ts  CreateCalendar.test.ts  CreateCalendar.ts
client/Common/: Alert.svelte  Alert.test.ts  AllyModal.svelte  AllyModal.test.ts  Asterisk.svelte  Asterisk.test.ts  Image.svelte  (+12 more)
commands/: __init__.py  database_seed.py  database_update.py  update_promotions.py  update_standings.py
migrations/: env.py
models/: __init__.py  baseball_game.py  baseball_team.py  promotion.py
public/: global.css  index.html  site.webmanifest
templates/: index.html
tests/: .env.example  MockHttpResponse.py  common_assertions.py  conftest.py  test_base.py
utility/: database_helpers.py  datetime_helpers.py  endpoint_constants.py  endpoint_helpers.py  mlb_api.py  team_map.py  utc_to_pt_converters.py
(+68 files in other folders)
